examples/bad/05-01-if-invalid-condition.lagger
int main(){
    if (1){
        println("1");
    }
    return 0;
}